--- a/about.css
+++ b/about.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Georgia', serif;
-  background-color: #fef9f5;
+  background-color: #f5d0b2;
   color: #333;
 }
 
