--- a/Product.css
+++ b/Product.css
@@ -1,6 +1,6 @@
 .product {
   padding: 80px 40px;
-  background-color: #fefaf6;
+  background-color: #dbb793;
   font-family: 'Poppins', sans-serif;
   text-align: center;
   text-transform: capitalize;
