--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ html::-webkit-scrollbar{
 #navbar{
   background-color: #b2744c;
   font-family: 'Roboto', sans-serif;
+  position:sticky;
 }
 #logo img{
   border-radius: 10px;
