--- a/menu.css
+++ b/menu.css
@@ -7,6 +7,7 @@
 }
 
 .heading3 {
+
   font-size: 2.5rem;
   text-align: center;
   margin-bottom: 40px;
@@ -16,9 +17,9 @@
 
 /* Grid system using Bootstrap */
 .row {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: flex !important;
+  flex-wrap: wrap !important;
+  justify-content: center !important;
   gap: 20px;
 }
 
