--- a/contact.css
+++ b/contact.css
@@ -9,7 +9,7 @@
 .contact .container {
   width: 100%;
   height: 80vh;
-  background: linear-gradient(90deg, white 80%, #b2744c 20%);
+  background: linear-gradient(90deg, rgb(218, 134, 9) 80%, #b2744c 20%);
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -114,7 +114,7 @@
 }
 .custom-btn {
   background-color: #8B4513; /* SaddleBrown */
-  color: white;
+  color: rgb(17, 145, 219);
   border: none;
 }
 .custom-btn:hover {
