--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family: 'Merriweather', serif;
 }
+.body{
+  display: flex;
+}
 .all-content{
   background: #f7f5f2;
 }
@@ -19,7 +22,7 @@ html::-webkit-scrollbar{
   width: 10px;
 }
 /* navbar */
-#navbar{
+/* #navbar{
  
   background-color: #879e78;
   font-family: 'Roboto', sans-serif;
@@ -27,7 +30,7 @@ html::-webkit-scrollbar{
   
 
 
-}
+} */
 .sidebar{
   width: 220px;
   height: 100vh;
@@ -52,16 +55,7 @@ html::-webkit-scrollbar{
 
 }
 
-.navbar-nav{
- 
-  margin: 15px 0;
-  padding: 30px;
-  position: fixed;
-  height: 100vh;
-  width: 200px;
-  margin-left: 240px;
-  margin-bottom: 40px;
-}
+
 
 #logo img{
   border-radius: 10px;
