--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ html::-webkit-scrollbar{
 
 }
 
-.sidebar ul{
+/* .sidebar ul{
   width: 100%;
 }
 .sidebar ul li{
@@ -51,7 +51,7 @@ html::-webkit-scrollbar{
   display: block;
   padding: 10px 15px;
 
-}
+} */
 
 
 
