--- a/style.css
+++ b/style.css
@@ -19,31 +19,53 @@ html::-webkit-scrollbar{
   width: 10px;
 }
 /* navbar */
-#navbar{
+#navbar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 220px;
   background-color: #b2744c;
-  font-family: 'Roboto', sans-serif;
-  position:sticky;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding-top: 20px;
+}
 
-}
-#logo img{
+#logo img {
+  width: 120px;
   border-radius: 10px;
-  width: 160px;
-  margin-left: 40px;
+  margin-bottom: 20px;
 }
-.navbar-nav{
-  margin-left: 50px;
+
+.navbar-nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
-.nav-item .nav-link{
-  color: black;
-  margin-left: 10px;
-  font-weight: bold;
-  transition: 0.5s;
+
+.nav-item {
+  width: 100%;
+  text-align: center;
+  margin: 10px 0;
 }
-.nav-item .nav-link:hover{
-  background: #f7f5f2;
-  border-radius: 5px;
-  color: black;
+
+.nav-item .nav-link {
+  color: white;
+  display: block;
+  padding: 10px 0;
+  width: 100%;
+  text-decoration: none;
+  transition: background 0.3s;
 }
+
+.nav-item .nav-link:hover {
+  background: #8b4513;
+  color: #fff;
+}
+
 #navbar form button{
   background: black;
   color: white;
