--- a/style.css
+++ b/style.css
@@ -19,82 +19,30 @@ html::-webkit-scrollbar{
   width: 10px;
 }
 /* navbar */
-#navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 250px;
-  height: 100%;
+#navbar{
   background-color: #b2744c;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 30px 10px;
-  box-shadow: 2px 0 8px rgba(0,0,0,0.2);
-}
+  font-family: 'Roboto', sans-serif;
+  position:sticky;
 
-#logo img {
-  width: 140px;
+}
+#logo img{
   border-radius: 10px;
-  margin-bottom: 30px;
+  width: 160px;
+  margin-left: 40px;
 }
-
-.navbar-nav {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding: 0;
-  margin: 0;
+.navbar-nav{
+  margin-left: 50px;
 }
-
-.nav-item {
-  width: 100%;
-  text-align: center;
+.nav-item .nav-link{
+  color: black;
+  margin-left: 10px;
+  font-weight: bold;
+  transition: 0.5s;
 }
-
-
-.nav-item .nav-link {
-  display: block;
-  color: white;
-  font-size: 18px;
-  font-weight: 500;
-  text-decoration: none;
-  padding: 12px 0;
-  width: 100%;
-  transition: all 0.3s ease;
+.nav-item .nav-link:hover{
+  background: #f7f5f2;
   border-radius: 5px;
-}
-
-.nav-item .nav-link:hover {
-  background-color: #8b4513;
-  color: #fff;
-}
-#navbar form {
-  margin-top: auto;
-  width: 100%;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-#navbar input[type="search"] {
-  width: 90%;
-  padding: 8px;
-  border-radius: 5px;
-  border: none;
-  outline: none;
-  margin-bottom: 10px;
-}
-#navbar button {
-  background: black;
-  color: white;
-  border: none;
-  padding: 8px 15px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background 0.3s;
+  color: black;
 }
 #navbar form button{
   background: black;
